--- a/siteCourse/users/templates/index.html
+++ b/siteCourse/users/templates/index.html
@@ -14,6 +14,7 @@
         <nav class="navbar navbar-expand-lg navbar-light container py-3">
             <a class="navbar-brand d-flex align-items-center" href="#">
                 <i class="fas fa-database fs-3 text-primary me-2"></i>
+
                 <span class="fw-bold">MySQL<span class="text-primary">Course</span></span>
             </a>
             
@@ -41,12 +42,13 @@
                 </ul>
                 
                 <div class="d-flex">
-                    {% if user.is_authenticated %}
 
+                    {% if user.is_authenticated %}
                     <a href="#" class="btn btn-primary">{{ user.username }}s</a>
+                    <a href="{% url 'logout' %}">Выйти</a>
                     {% else %}
-                    <a href="{% url 'login' %}" class="btn btn-outline-primary me-2">Вход</a>
-                    <a href="{% url 'register' %}" class="btn btn-primary">Регистрация</a>
+                    <a href="{% url 'account_login' %}" class="btn btn-outline-primary me-2">Вход</a>
+                    <a href="{% url 'account_signup' %}" class="btn btn-primary">Регистрация</a>
                     {% endif %}
                 </div>
             </div>
