--- a/siteCourse/users/templates/registration.html
+++ b/siteCourse/users/templates/registration.html
@@ -1,4 +1,4 @@
-
+{% load i18n %}
 
 <!DOCTYPE html>
 <html lang="ru">
@@ -32,6 +32,13 @@
             background-image: none;
             padding-right: 12px;
         }
+        .socialaccount-providers {
+            list-style: none;
+            padding: 0;
+        }
+        .socialaccount-providers li {
+            margin-bottom: 10px;
+        }
     </style>
 </head>
 <body class="bg-light">
@@ -49,8 +56,22 @@
                 </div>
             {% endif %}
 
-            <form method="post" id="registrationForm" novalidate>
+            {% if socialaccount.providers %}
+                <div class="social-login mb-4">
+                    <p class="text-center">Или войдите через:</p>
+                    <ul class="socialaccount-providers">
+                        {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+                    </ul>
+                    <div class="login-or text-center my-3">или</div>
+                </div>
+            {% endif %}
+
+            <form method="post" action="{% url 'account_signup' %}" id="registrationForm" novalidate>
                 {% csrf_token %}
+
+                {% if redirect_field_value %}
+                    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
 
                 <!-- Имя пользователя -->
                 <div class="mb-3">
@@ -138,9 +159,9 @@
                 <button type="submit" class="btn btn-primary w-100">Зарегистрироваться</button>
             </form>
 
-           <div class="mt-3 text-center">
-    Уже есть аккаунт? <a href="{% url 'login' %}">Войти</a>
-</div>
+            <div class="mt-3 text-center">
+                Уже есть аккаунт? <a href="{% url 'account_login' %}">Войти</a>
+            </div>
         </div>
     </div>
 
