--- a/siteCourse/users/templates/index.html
+++ b/siteCourse/users/templates/index.html
@@ -44,11 +44,16 @@
                 <div class="d-flex">
 
                     {% if user.is_authenticated %}
-                    <a href="#" class="btn btn-primary">{{ user.username }}s</a>
-                    <a href="{% url 'logout' %}">Выйти</a>
+
+                    <a href="#" class="btn btn-primary"><i class="fas fa-user"></i> {{ user.username }}</a>
+                    <form method="post" action="{% url 'account_logout' %}">
+                        {% csrf_token %}
+                        <input type="hidden" name="next" value="/"/>
+                        <button class="btn" type="submit"><i class="fas fa-sign-in-alt"></i> Logout</button>
+                    </form>
                     {% else %}
-                    <a href="{% url 'account_login' %}" class="btn btn-outline-primary me-2">Вход</a>
-                    <a href="{% url 'account_signup' %}" class="btn btn-primary">Регистрация</a>
+                    <a href="{% url 'account_login' %}" class="btn btn-outline-primary me-2"><i class="fas fa-sign-in-alt"></i> Вход</a>
+                    <a href="{% url 'account_signup' %}" class="btn btn-primary"><i class="fas fa-user"></i> Регистрация</a>
                     {% endif %}
                 </div>
             </div>
