--- a/siteCourse/users/templates/index.html
+++ b/siteCourse/users/templates/index.html
@@ -90,7 +90,7 @@
                     <div class="col-md-4">
                         <div class="card h-100 border-0 shadow-sm">
                             <div class="card-body text-center p-4">
-                                <div class="icon-lg bg-primary bg-opacity-10 text-primary mb-3 mx-auto">
+                                <div class="icon-lg bg-primary bg-opacity-10 text-primary mb-3 pt-2 pb-2 circle mx-auto">
                                     <i class="fas fa-database fs-4"></i>
                                 </div>
                                 <h3 class="h5">Основы SQL</h3>
@@ -102,7 +102,7 @@
                     <div class="col-md-4">
                         <div class="card h-100 border-0 shadow-sm">
                             <div class="card-body text-center p-4">
-                                <div class="icon-lg bg-primary bg-opacity-10 text-primary mb-3 mx-auto">
+                                <div class="icon-lg bg-primary bg-opacity-10 text-primary mb-3 pt-2 pb-2 mx-auto">
                                     <i class="fas fa-table fs-4"></i>
                                 </div>
                                 <h3 class="h5">Работа с таблицами</h3>
@@ -114,7 +114,7 @@
                     <div class="col-md-4">
                         <div class="card h-100 border-0 shadow-sm">
                             <div class="card-body text-center p-4">
-                                <div class="icon-lg bg-primary bg-opacity-10 text-primary mb-3 mx-auto">
+                                <div class="icon-lg bg-primary bg-opacity-10 text-primary mb-3 pt-2 pb-2 mx-auto">
                                     <i class="fas fa-chart-line fs-4"></i>
                                 </div>
                                 <h3 class="h5">Производительность</h3>
