--- a/siteCourse/users/templates/courses/course_detail.html
+++ b/siteCourse/users/templates/courses/course_detail.html
@@ -1,6 +1,5 @@
-{% extends "base.html" %}
+{% extends "partials/base.html" %}
 
-<body>
 {% block content %}
 <div class="container mt-4">
     <div class="row">
@@ -77,4 +76,3 @@
     </div>
 </div>
 {% endblock %}
-</body>
