--- a/siteCourse/users/templates/partials/header.html
+++ b/siteCourse/users/templates/partials/header.html
@@ -15,10 +15,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="#">Главная</a>
+                    <a class="nav-link active" href="/">Главная</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Курсы</a>
+                    <a class="nav-link" href="/course/1">Курсы</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Теория</a>
